--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-  <title>Triggui App - Final Perfecta</title>
-  <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&display=swap" rel="stylesheet">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+  <title>Triggui – Ritual Perfecto</title>
+  <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&display=swap" rel="stylesheet" />
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
     html, body {
       width: 100%;
       height: 100%;
       font-family: 'Archivo', sans-serif;
-      background: #fafafa;
+      background: white;
       overflow: hidden;
     }
-    body.dark { background: #000; transition: background 0.5s ease; }
-
-    .main { height: 100dvh; display: flex; flex-direction: column; }
+    body.dark {
+      background: #000;
+    }
+    .main {
+      height: 100dvh;
+      display: flex;
+      flex-direction: column;
+    }
     .grid {
       flex: 1;
       display: grid;
@@ -24,64 +33,75 @@
       grid-template-rows: 1fr 1fr;
       gap: 2vw;
       padding: 2vw;
+      overflow-y: auto;
     }
     @media (orientation: landscape), (min-width: 768px) {
-      .grid { grid-template-columns: repeat(4, 1fr); grid-template-rows: 1fr; }
+      .grid {
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: 1fr;
+      }
     }
     .block {
       display: flex;
       justify-content: center;
       align-items: center;
       text-align: center;
-      border-radius: 20px;
-      background-size: cover;
-      background-position: center;
+      border-radius: 16px;
       font-weight: bold;
-      font-size: 1.3rem;
+      font-size: 1.1rem;
       color: white;
-      cursor: pointer;
       position: relative;
       overflow: hidden;
-      transition: transform 0.4s, box-shadow 0.4s;
+      background-size: cover;
+      background-position: center;
+      cursor: pointer;
+      transition: all 0.3s ease;
     }
-    .block:hover { transform: scale(1.05); box-shadow: 0 10px 30px rgba(0,0,0,0.3); }
     .block-content {
       position: absolute;
       inset: 0;
       display: flex;
       justify-content: center;
       align-items: center;
-      text-align: center;
       padding: 14px;
+      text-align: center;
     }
-    .label { z-index: 1; }
-
+    .label {
+      z-index: 1;
+    }
     .accionable {
-      font-size: 1.1rem;
+      color: white;
+      font-size: 1rem;
       font-weight: 600;
       padding: 16px;
-      border-radius: 20px;
+      border-radius: 16px;
       opacity: 0;
-      animation: aparecer 0.7s forwards;
-      background: rgba(255,255,255,0.15);
-      backdrop-filter: blur(6px);
-      box-shadow: 0 6px 20px rgba(0,0,0,0.4);
+      animation: aparecer 0.6s forwards;
+      box-shadow: 0 8px 30px rgba(0, 0, 0, 0.3);
     }
-    .bg1 { background: linear-gradient(135deg, #ff416c, #ff4b2b); color: #fff; }
-    .bg2 { background: linear-gradient(135deg, #00c3ff, #ffff1c); color: #000; }
-    .bg3 { background: linear-gradient(135deg, #fc466b, #3f5efb); color: #fff; }
-    .bg4 { background: linear-gradient(135deg, #8e2de2, #4a00e0); color: #fff; }
+    .bg1 { background: #ffccbc; color: #3e2723; }
+    .bg2 { background: #c8e6c9; color: #1b5e20; }
+    .bg3 { background: #b3e5fc; color: #01579b; }
+    .bg4 { background: #f8bbd0; color: #880e4f; }
 
     .portada-img {
       width: 100%;
       height: 100%;
       object-fit: contain;
-      border-radius: 20px;
-      box-shadow: 0 10px 40px rgba(0,0,0,0.5);
-      animation: flotar 6s ease-in-out infinite;
+      animation: flotar 8s ease-in-out infinite;
+      border-radius: 0;
+      background: none;
     }
-    @keyframes flotar { 0%, 100% { transform: translateY(0); } 50% { transform: translateY(-8px); } }
-    @keyframes aparecer { from { opacity: 0; transform: scale(0.9); } to { opacity: 1; transform: scale(1); } }
+
+    @keyframes flotar {
+      0%, 100% { transform: translateY(0); }
+      50% { transform: translateY(-8px); }
+    }
+
+    @keyframes aparecer {
+      from { opacity: 0; transform: scale(0.95); }
+      to { opacity: 1; transform: scale(1); }
+    }
 
     .footer {
       display: flex;
@@ -91,47 +111,61 @@
       min-height: 80px;
       justify-content: center;
     }
+
     .shock {
       background: linear-gradient(135deg, #ff6a00, #ffb347);
       color: white;
       font-weight: bold;
       border: none;
       border-radius: 30px;
-      padding: 12px 28px;
+      padding: 10px 22px;
       font-size: 1rem;
       cursor: pointer;
-      box-shadow: 0 6px 16px rgba(255,140,0,0.5);
-      margin-bottom: 8px;
+      box-shadow: 0 4px 16px rgba(255, 140, 0, 0.4);
+      animation: fadeIn 1s ease forwards;
+      margin-bottom: 6px;
     }
-    .final-message { color: white; font-size: 1.2rem; text-align: center; opacity: 0.9; margin-top: 8px; }
+
+    .final-message {
+      color: white;
+      font-size: 1rem;
+      text-align: center;
+      opacity: 0.88;
+    }
+
     #reiniciarBtn {
       background: rgba(255,255,255,0.1);
       border: none;
-      font-size: 1.6rem;
-      padding: 10px 18px;
-      border-radius: 16px;
+      font-size: 1.5rem;
+      padding: 8px 14px;
+      border-radius: 14px;
       cursor: pointer;
       color: white;
-      backdrop-filter: blur(6px);
-      margin-top: 8px;
+      backdrop-filter: blur(5px);
+      margin-top: 6px;
     }
-    #reiniciarBtn:hover { background: rgba(255,255,255,0.2); }
+
+    #reiniciarBtn:hover {
+      background: rgba(255,255,255,0.2);
+    }
+
     .trigguiletras {
-      height: 26px;
+      height: 24px;
       opacity: 0.9;
-      margin-top: 8px;
       transition: opacity 0.4s ease;
     }
-    .hidden { display: none !important; }
+
+    .hidden {
+      display: none !important;
+    }
   </style>
 </head>
-
 <body>
   <div class="main">
     <div class="grid" id="gridContainer"></div>
     <div class="footer">
-      <button class="shock hidden" id="shockBtn">📚👊 ¡Chócalas!</button>
-      <div class="final-message hidden" id="mensajeFinal">📖 ¿Listo para abrir un libro físico?</div>
+      <button class="shock hidden" id="shockBtn">📚👊 Chócalas</button>
+      <div class="final-message hidden" id="mensajeFinal">📖 Abre un libro y encuentra una verdad.</div>
       <button id="reiniciarBtn" class="hidden">↻</button>
       <img src="/trigguiletras.png" class="trigguiletras" id="logoTriggui" />
     </div>
@@ -140,26 +174,44 @@
 <script>
 const el = id => document.getElementById(id);
 const bloques = ["detente", "lee", "pregunta", "conecta"];
-const frases = [
-  "🚀 Da un micro paso hoy.",
-  "🧠 Conquista tu mente primero.",
-  "🎯 Encuentra tu siguiente misión.",
-  "💬 Conecta una idea con una acción."
+const colores = [
+  "#ffccbc",
+  "#c8e6c9",
+  "#b3e5fc",
+  "#f8bbd0"
 ];
-const portadaURL = "https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1573309166i/50033678.jpg";
-let bloquePortada = bloques[Math.floor(Math.random() * bloques.length)];
-let revelado = false;
+
+const libros = [
+  {
+    portada: 'https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1573309166i/50033678.jpg',
+    frases: [
+      "🧠 El poder nace del autoconocimiento.",
+      "👁️ Lo emocional es lo más racional.",
+      "🎭 Entiende tus sombras y hazlas aliadas.",
+      "🧬 Todo comportamiento tiene raíz invisible."
+    ]
+  }
+];
+
+let libroActual, bloquePortada, revelado = false;
 
 function iniciarJuego() {
   const grid = el('gridContainer');
   const logo = el('logoTriggui');
   grid.innerHTML = '';
+  libroActual = libros[0];
+  bloquePortada = bloques[Math.floor(Math.random() * bloques.length)];
+  revelado = false;
   logo.classList.remove("hidden");
+
+  let frases = [...libroActual.frases];
+  while (frases.length < 4) frases.push(...libroActual.frases);
 
   bloques.forEach((nombre, i) => {
     const div = document.createElement('div');
     div.className = 'block';
     div.id = nombre;
+    div.style.background = colores[i];
     const bgClass = `bg${i+1}`;
     div.innerHTML = `
       <div class="block-content label">${nombre.toUpperCase()}</div>
@@ -176,36 +228,26 @@ function manejarClick(nombre) {
     revelarTodo();
   } else {
     const text = el(nombre + "Text");
-    if (text) {
-      text.classList.remove("hidden");
-      el(nombre).querySelector(".label").classList.add("hidden");
-    }
+    text.classList.remove("hidden");
+    el(nombre).querySelector(".label").classList.add("hidden");
   }
 }
 
 function revelarTodo() {
-  bloques.forEach(nombre => {
+  bloques.forEach((nombre, i) => {
     const block = el(nombre);
-    const label = block.querySelector(".label");
     const text = el(nombre + "Text");
-
+    block.querySelector(".label").classList.add("hidden");
     if (nombre === bloquePortada) {
-      if (label) label.classList.add("hidden");
-      if (text) text.remove();
-      const img = document.createElement("img");
-      img.src = portadaURL;
-      img.alt = "Portada del libro";
-      img.className = "portada-img";
-      block.innerHTML = '';
-      block.appendChild(img);
+      // Reemplazar completamente el contenido con solo la imagen
+      block.innerHTML = `<img src="${libroActual.portada}" class="portada-img" alt="Portada del libro">`;
       block.style.background = "none";
-      block.style.borderRadius = "20px";
+      block.style.padding = "0";
+      block.style.borderRadius = "0";
     } else {
-      if (text) text.classList.remove("hidden");
-      if (label) label.classList.add("hidden");
+      text.classList.remove("hidden");
     }
   });
-
   document.body.classList.add("dark");
   el("shockBtn").classList.remove("hidden");
   el("logoTriggui").classList.add("hidden");
