--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,7 @@
   <title>Triggui – Ritual Perfecto</title>
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&display=swap" rel="stylesheet" />
   <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
     html, body {
       width: 100%;
       height: 100%;
@@ -18,14 +14,8 @@
       background: white;
       overflow: hidden;
     }
-    body.dark {
-      background: #000;
-    }
-    .main {
-      height: 100dvh;
-      display: flex;
-      flex-direction: column;
-    }
+    body.dark { background: #000; }
+    .main { height: 100dvh; display: flex; flex-direction: column; }
     .grid {
       flex: 1;
       display: grid;
@@ -36,10 +26,7 @@
       overflow-y: auto;
     }
     @media (orientation: landscape), (min-width: 768px) {
-      .grid {
-        grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: 1fr;
-      }
+      .grid { grid-template-columns: repeat(4, 1fr); grid-template-rows: 1fr; }
     }
     .block {
       display: flex;
@@ -66,9 +53,7 @@
       padding: 14px;
       text-align: center;
     }
-    .label {
-      z-index: 1;
-    }
+    .label { z-index: 1; }
     .accionable {
       color: white;
       font-size: 1rem;
@@ -89,7 +74,7 @@
       height: 100%;
       object-fit: contain;
       animation: flotar 8s ease-in-out infinite;
-      border-radius: 0;
+      border-radius: 16px; /* CORREGIDO A 16px */
       background: none;
     }
 
@@ -97,12 +82,10 @@
       0%, 100% { transform: translateY(0); }
       50% { transform: translateY(-8px); }
     }
-
     @keyframes aparecer {
       from { opacity: 0; transform: scale(0.95); }
       to { opacity: 1; transform: scale(1); }
     }
-
     .footer {
       display: flex;
       flex-direction: column;
@@ -111,7 +94,6 @@
       min-height: 80px;
       justify-content: center;
     }
-
     .shock {
       background: linear-gradient(135deg, #ff6a00, #ffb347);
       color: white;
@@ -125,14 +107,12 @@
       animation: fadeIn 1s ease forwards;
       margin-bottom: 6px;
     }
-
     .final-message {
       color: white;
       font-size: 1rem;
       text-align: center;
       opacity: 0.88;
     }
-
     #reiniciarBtn {
       background: rgba(255,255,255,0.1);
       border: none;
@@ -144,22 +124,16 @@
       backdrop-filter: blur(5px);
       margin-top: 6px;
     }
-
-    #reiniciarBtn:hover {
-      background: rgba(255,255,255,0.2);
-    }
-
+    #reiniciarBtn:hover { background: rgba(255,255,255,0.2); }
     .trigguiletras {
       height: 24px;
       opacity: 0.9;
       transition: opacity 0.4s ease;
     }
-
-    .hidden {
-      display: none !important;
-    }
+    .hidden { display: none !important; }
   </style>
 </head>
+
 <body>
   <div class="main">
     <div class="grid" id="gridContainer"></div>
@@ -174,13 +148,7 @@
 <script>
 const el = id => document.getElementById(id);
 const bloques = ["detente", "lee", "pregunta", "conecta"];
-const colores = [
-  "#ffccbc",
-  "#c8e6c9",
-  "#b3e5fc",
-  "#f8bbd0"
-];
-
+const colores = ["#ffccbc", "#c8e6c9", "#b3e5fc", "#f8bbd0"];
 const libros = [
   {
     portada: 'https://images-na.ssl-images-amazon.com/images/S/compressed.photo.goodreads.com/books/1573309166i/50033678.jpg',
@@ -234,16 +202,16 @@ function manejarClick(nombre) {
 }
 
 function revelarTodo() {
-  bloques.forEach((nombre, i) => {
+  bloques.forEach((nombre) => {
     const block = el(nombre);
     const text = el(nombre + "Text");
     block.querySelector(".label").classList.add("hidden");
+
     if (nombre === bloquePortada) {
-      // Reemplazar completamente el contenido con solo la imagen
       block.innerHTML = `<img src="${libroActual.portada}" class="portada-img" alt="Portada del libro">`;
       block.style.background = "none";
       block.style.padding = "0";
-      block.style.borderRadius = "0";
+      block.style.borderRadius = "16px"; // Aquí está corregido
     } else {
       text.classList.remove("hidden");
     }
