--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,9 @@
       overflow: hidden;
     }
     body.dark { background: #000; }
+
     .main { height: 100dvh; display: flex; flex-direction: column; }
+
     .grid {
       flex: 1;
       display: grid;
@@ -25,9 +27,14 @@
       padding: 2vw;
       overflow-y: auto;
     }
+
     @media (orientation: landscape), (min-width: 768px) {
-      .grid { grid-template-columns: repeat(4, 1fr); grid-template-rows: 1fr; }
+      .grid {
+        grid-template-columns: repeat(4, 1fr);
+        grid-template-rows: 1fr;
+      }
     }
+
     .block {
       display: flex;
       justify-content: center;
@@ -44,6 +51,7 @@
       cursor: pointer;
       transition: all 0.3s ease;
     }
+
     .block-content {
       position: absolute;
       inset: 0;
@@ -53,7 +61,9 @@
       padding: 14px;
       text-align: center;
     }
+
     .label { z-index: 1; }
+
     .accionable {
       color: white;
       font-size: 1rem;
@@ -64,6 +74,7 @@
       animation: aparecer 0.6s forwards;
       box-shadow: 0 8px 30px rgba(0, 0, 0, 0.3);
     }
+
     .bg1 { background: #ffccbc; color: #3e2723; }
     .bg2 { background: #c8e6c9; color: #1b5e20; }
     .bg3 { background: #b3e5fc; color: #01579b; }
@@ -74,18 +85,19 @@
       height: 100%;
       object-fit: contain;
       animation: flotar 8s ease-in-out infinite;
-      border-radius: 16px; /* CORREGIDO A 16px */
-      background: none;
+      border-radius: 16px;
     }
 
     @keyframes flotar {
       0%, 100% { transform: translateY(0); }
       50% { transform: translateY(-8px); }
     }
+
     @keyframes aparecer {
       from { opacity: 0; transform: scale(0.95); }
       to { opacity: 1; transform: scale(1); }
     }
+
     .footer {
       display: flex;
       flex-direction: column;
@@ -94,6 +106,7 @@
       min-height: 80px;
       justify-content: center;
     }
+
     .shock {
       background: linear-gradient(135deg, #ff6a00, #ffb347);
       color: white;
@@ -107,12 +120,14 @@
       animation: fadeIn 1s ease forwards;
       margin-bottom: 6px;
     }
+
     .final-message {
       color: white;
       font-size: 1rem;
       text-align: center;
       opacity: 0.88;
     }
+
     #reiniciarBtn {
       background: rgba(255,255,255,0.1);
       border: none;
@@ -124,12 +139,17 @@
       backdrop-filter: blur(5px);
       margin-top: 6px;
     }
-    #reiniciarBtn:hover { background: rgba(255,255,255,0.2); }
+
+    #reiniciarBtn:hover {
+      background: rgba(255,255,255,0.2);
+    }
+
     .trigguiletras {
       height: 24px;
       opacity: 0.9;
       transition: opacity 0.4s ease;
     }
+
     .hidden { display: none !important; }
   </style>
 </head>
@@ -208,14 +228,22 @@ function revelarTodo() {
     block.querySelector(".label").classList.add("hidden");
 
     if (nombre === bloquePortada) {
-      block.innerHTML = `<img src="${libroActual.portada}" class="portada-img" alt="Portada del libro">`;
+      block.innerHTML = '';
       block.style.background = "none";
       block.style.padding = "0";
-      block.style.borderRadius = "16px"; // Aquí está corregido
+      block.style.borderRadius = "16px";
+      block.style.overflow = "hidden";
+
+      const img = document.createElement("img");
+      img.src = libroActual.portada;
+      img.alt = "Portada del libro";
+      img.className = "portada-img";
+      block.appendChild(img);
     } else {
       text.classList.remove("hidden");
     }
   });
+
   document.body.classList.add("dark");
   el("shockBtn").classList.remove("hidden");
   el("logoTriggui").classList.add("hidden");
