--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
-  <title>Triggui – Ritual</title>
+  <title>Triggui – Heurística Ritual</title>
   <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&display=swap" rel="stylesheet">
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
@@ -53,6 +53,11 @@
       background-size: cover;
       background-position: center;
       cursor: pointer;
+      transition: transform 0.2s ease;
+    }
+
+    .block:hover {
+      transform: scale(1.02);
     }
 
     .block-content {
@@ -137,7 +142,29 @@
       margin-top: 10px;
       text-align: center;
       font-weight: 400;
-      opacity: 0.7;
+      opacity: 0.8;
+    }
+
+    .pulse {
+      animation: pulse 2s infinite;
+    }
+
+    @keyframes pulse {
+      0% { transform: scale(1); opacity: 1; }
+      50% { transform: scale(1.015); opacity: 0.95; }
+      100% { transform: scale(1); opacity: 1; }
+    }
+
+    .shake {
+      animation: shake 0.3s;
+    }
+
+    @keyframes shake {
+      0% { transform: translateX(0px); }
+      25% { transform: translateX(-4px); }
+      50% { transform: translateX(4px); }
+      75% { transform: translateX(-2px); }
+      100% { transform: translateX(0px); }
     }
 
     .hidden { display: none !important; }
@@ -145,30 +172,14 @@
 </head>
 <body>
   <div class="main">
-    <div class="grid">
-      <div class="block" id="detente" style="background: linear-gradient(135deg, #ff6a00, #ee0979);">
-        <div class="block-content label">Detente</div>
-        <div class="block-content accionable hidden" id="detenteText"></div>
-      </div>
-      <div class="block" id="lee" style="background: linear-gradient(135deg, #56ab2f, #a8e063);">
-        <div class="block-content label">Lee</div>
-        <div class="block-content portada-wrapper hidden" id="leeCover">
-          <img id="leeImg" src="" alt="Portada del libro" />
-        </div>
-      </div>
-      <div class="block" id="pregunta" style="background: linear-gradient(135deg, #36d1dc, #5b86e5);">
-        <div class="block-content label">?</div>
-        <div class="block-content accionable hidden" id="preguntaText"></div>
-      </div>
-      <div class="block" id="conecta" style="background: linear-gradient(135deg, #c31432, #240b36);">
-        <div class="block-content label">Conecta</div>
-        <div class="block-content accionable hidden" id="conectaText"></div>
-      </div>
+    <div class="grid" id="gridContainer">
+      <!-- Los bloques se generarán dinámicamente -->
     </div>
 
     <div class="footer">
       <button class="shock hidden" id="shockBtn">📚👊 Chócalas por leer un libro físico</button>
       <div class="final-message hidden" id="mensajeFinal">
+        El libro no te eligió. Tú ya estabas listo para encontrarlo.<br><br>
         Ahora… busca un libro que tengas cerca. Ábrelo en cualquier página y lee una sola frase con absoluta presencia.
       </div>
       <img src="/trigguiletras.png" class="trigguiletras" />
@@ -177,12 +188,12 @@
 
   <script>
     const bloques = ["detente", "lee", "pregunta", "conecta"];
-    const frasesIds = {
-      detente: "detenteText",
-      lee: "leeCover",
-      pregunta: "preguntaText",
-      conecta: "conectaText"
-    };
+    const colores = [
+      "linear-gradient(135deg, #ff6a00, #ee0979)",
+      "linear-gradient(135deg, #56ab2f, #a8e063)",
+      "linear-gradient(135deg, #36d1dc, #5b86e5)",
+      "linear-gradient(135deg, #c31432, #240b36)"
+    ];
 
     const libros = [
       {
@@ -195,18 +206,42 @@
       }
     ];
 
-    let libroActual = null;
-    let bloquePortada = null;
-    let revelado = false;
+    let libroActual, bloquePortada, revelado = false;
     const mostrado = new Set();
 
     const el = id => document.getElementById(id);
 
     function iniciarJuego() {
+      const grid = el('gridContainer');
+      grid.innerHTML = '';
+
       libroActual = libros[Math.floor(Math.random() * libros.length)];
       bloquePortada = bloques[Math.floor(Math.random() * bloques.length)];
       revelado = false;
       mostrado.clear();
+
+      bloques.forEach((nombre, i) => {
+        const div = document.createElement('div');
+        div.className = 'block' + (nombre === bloquePortada ? ' pulse' : '');
+        div.id = nombre;
+        div.style.background = colores[i];
+        div.innerHTML = `
+          <div class="block-content label">${nombre.charAt(0).toUpperCase() + nombre.slice(1)}</div>
+          <div class="block-content accionable hidden" id="${nombre}Text"></div>
+        `;
+        div.onclick = () => manejarClick(nombre);
+        grid.appendChild(div);
+      });
+    }
+
+    function manejarClick(nombre) {
+      if (revelado) {
+        cerrarTodo();
+      } else if (nombre === bloquePortada) {
+        revelarTodo();
+      } else {
+        revelarSolo(nombre);
+      }
     }
 
     function revelarSolo(bloque) {
@@ -214,26 +249,23 @@
       mostrado.add(bloque);
       const index = bloques.indexOf(bloque);
       const frase = libroActual.frases[index % 3];
-      const target = frasesIds[bloque];
-      el(target).textContent = frase;
-      el(target).classList.remove("hidden");
+      el(bloque + "Text").textContent = frase;
+      el(bloque + "Text").classList.remove("hidden");
       el(bloque).querySelector(".label").classList.add("hidden");
+      el(bloque).classList.add("shake");
+      setTimeout(() => el(bloque).classList.remove("shake"), 300);
     }
 
     function revelarTodo() {
-      const frases = [...libroActual.frases].sort(() => Math.random() - 0.5);
-      let i = 0;
-
-      bloques.forEach(bloque => {
+      bloques.forEach((bloque, i) => {
         if (bloque === bloquePortada) {
-          el("leeImg").src = libroActual.portada;
-          el("leeCover").classList.remove("hidden");
+          el(bloque + "Text").innerHTML = `<img src="${libroActual.portada}" style="width:90%;border-radius:12px;">`;
         } else {
-          const target = frasesIds[bloque];
-          el(target).textContent = frases[i++];
-          el(target).classList.remove("hidden");
+          el(bloque + "Text").textContent = libroActual.frases[i % 3];
         }
+        el(bloque + "Text").classList.remove("hidden");
         el(bloque).querySelector(".label").classList.add("hidden");
+        el(bloque).classList.remove("pulse");
       });
 
       document.body.classList.add("dark");
@@ -242,25 +274,15 @@
     }
 
     function cerrarTodo() {
-      Object.values(frasesIds).forEach(id => el(id).classList.add("hidden"));
-      document.querySelectorAll(".label").forEach(l => l.classList.remove("hidden"));
+      bloques.forEach(bloque => {
+        el(bloque + "Text").classList.add("hidden");
+        el(bloque).querySelector(".label").classList.remove("hidden");
+      });
       el("shockBtn").classList.add("hidden");
       el("mensajeFinal").classList.add("hidden");
       document.body.classList.remove("dark");
       iniciarJuego();
     }
-
-    bloques.forEach(bloque => {
-      el(bloque).onclick = () => {
-        if (revelado) {
-          cerrarTodo();
-        } else if (bloque === bloquePortada) {
-          revelarTodo();
-        } else {
-          revelarSolo(bloque);
-        }
-      };
-    });
 
     el("shockBtn").onclick = () => {
       el("shockBtn").classList.add("hidden");
