--- a/public/index.html
+++ b/public/index.html
@@ -40,11 +40,11 @@
       align-items: center;
       text-align: center;
       border-radius: 16px;
+      overflow: hidden; /* 👈 clave para redondeo real */
       font-weight: bold;
       font-size: 1.1rem;
       color: white;
       position: relative;
-      overflow: hidden;
       background-size: cover;
       background-position: center;
       cursor: pointer;
@@ -84,7 +84,7 @@
       height: 100%;
       object-fit: contain;
       animation: flotar 8s ease-in-out infinite;
-      border-radius: 16px;
+      border-radius: inherit; /* 👈 hereda los 16px del .block */
     }
 
     @keyframes flotar {
@@ -227,8 +227,6 @@ function revelarTodo() {
       block.innerHTML = '';
       block.style.background = "none";
       block.style.padding = "0";
-      block.style.borderRadius = "16px";
-      block.style.overflow = "hidden";
 
       const img = document.createElement("img");
       img.src = libroActual.portada;
