--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,6 @@
       gap: 2vw;
       padding: 2vw;
     }
-
     @media (orientation: landscape), (min-width: 768px) {
       .grid {
         grid-template-columns: repeat(4, 1fr);
@@ -48,6 +47,7 @@
       background-position: center;
       cursor: pointer;
       transition: all 0.3s ease;
+      overflow: hidden;
     }
 
     .block-content {
@@ -93,6 +93,7 @@
       width: 100%;
       height: 100%;
       object-fit: contain;
+      border-radius: 16px; /* REDONDEA LA IMAGEN TAMBIÉN */
     }
 
     @keyframes flotar {
@@ -146,7 +147,6 @@
       backdrop-filter: blur(5px);
       margin-top: 6px;
     }
-
     #reiniciarBtn:hover {
       background: rgba(255,255,255,0.2);
     }
